--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,142 @@
-/* You can add global styles to this file, and also import other style files */
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+nav.flex-column > a{
+  padding: 5px;
+  text-decoration: none;
+}
+
+input {
+  padding: 4px 12px 5px;
+  color: #252626;
+  border-radius: 0;
+  border: 1px solid #c1c3c5;
+  background-color: #fff;
+
+  &:focus {
+    border-color: #0087e0;
+    box-shadow: inset 0 0 0 1px #0087e0, 0 2px 4px 0 rgb(0 135 224 / 15%);
+    outline: 0;
+  }
+}
+
+.btn {
+  display: inline-block;
+  opacity: 1;
+  cursor: pointer;
+  min-width: 160px;
+  max-width: 100%;
+  height: 30px;
+  padding: 3px 15px;
+  margin: 0 2px 6px 0;
+  color: #252626;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  text-shadow: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: manipulation;
+  box-sizing: border-box;
+  border-color: #c1c3c5;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgb(22 62 89 / 12%);
+
+  &.btn-primary {
+    color: #fff;
+    border-color: #4d8400;
+    background-color: #4d8400;
+    box-shadow: 0 2px 4px 0 rgb(59 102 0 / 20%);
+    &:hover {
+      border-color: #68a611;
+      background-color: #68a611;
+    }
+  }
+
+  &:active {
+    background-color: #d9dcde;
+  }
+
+  &:hover {
+    border-color: #96d2fa;
+    background-color: #dceefa;
+    box-shadow: 0 2px 4px 0 rgb(0 135 224 / 15%);
+  }
+}
+
+.btn-option {
+  display: inline-block;
+  opacity: 1;
+  cursor: pointer;
+  width: 90px;
+  height: 30px;
+  padding: 3px 15px;
+  margin: 0 2px 6px 0;
+  color: #252626;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-decoration: none;
+  text-shadow: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  touch-action: manipulation;
+  box-sizing: border-box;
+  border-color: #c1c3c5;
+  background-color: #fff;
+  box-shadow: 0 2px 4px 0 rgb(22 62 89 / 12%);
+  &:active {
+    background-color: #d9dcde;
+  }
+
+  &:hover {
+    border-color: #96d2fa;
+    background-color: #dceefa;
+    box-shadow: 0 2px 4px 0 rgb(0 135 224 / 15%);
+  }
+}
+
+.form-inline {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+
+  .form-group {
+    display: inline-block;
+    padding-right: 12px;
+  }
+}
+
+.form-group {
+  clear: both;
+  margin-bottom: 12px;
+
+  label {
+    padding: 6px 6px 6px 0;
+    display: inline-block;
+    color: #252626;
+  }
+}
